--- a/projects/ts-etl-ui/.eslintrc.json
+++ b/projects/ts-etl-ui/.eslintrc.json
@@ -16,6 +16,26 @@
             "prefix": "app",
             "style": "kebab-case"
           }
+        ],
+        "import/order": [
+          1,
+          {
+            "groups": [
+              "external",
+              "builtin",
+              "internal",
+              "sibling",
+              "parent",
+              "index"
+            ],
+            "newlines-between": "always",
+            "alphabetize": {
+              /* sort in ascending order. Options: ["ignore", "asc", "desc"] */
+              "order": "asc",
+              /* ignore case. Options: [true, false] */
+              "caseInsensitive": false
+            }
+          }
         ]
       }
     },
