--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,9 @@
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
+      "plugins": [
+        "import"
+      ],
       "rules": {
         "@angular-eslint/component-selector": [
           "error",
