--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -38,15 +38,22 @@ jobs:
 
       - name: Upload current run playwright html result to Artifacts
         uses: actions/upload-artifact@v4
-        if: always()
+        if: false # always()
         with:
           name: playwright-report
           path: playwright-report
           retention-days: 30
 
+      - name: Upload all report to github-pages
+        # if: steps.download_playwright_html_report.outcome == 'success' && steps.download_allure_report.outcome == 'success'
+        if: always()
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: playwright-report
+
       - name: Upload current run allure result to Artifacts
         uses: actions/upload-artifact@v4
-        if: always()
+        if: false # always()
         with:
           name: current-allure-result
           path: allure-results
@@ -56,7 +63,7 @@ jobs:
     # GitHub CLI is not available in playwright image container, so this needs a seperated job
     name: playwright-allure-report
     needs: [ e2e-test ]
-    if: always()
+    if: false # always()
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -111,7 +118,7 @@ jobs:
   upload-allure-and-playwright-report:
     name: upload-allure-and-playwright-report
     needs: [ playwright-allure-report ]
-    if: always()
+    if: false # always()
     runs-on: ubuntu-latest
     # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
@@ -130,6 +137,7 @@ jobs:
         uses: actions/configure-pages@v4
 
       - name: Download playwright html from current run
+        if: false
         id: download_playwright_html_report
         uses: actions/download-artifact@v4
         with:
@@ -137,6 +145,7 @@ jobs:
           path: all-report/playwright-report
 
       - name: Download allure report from current run
+        if: false
         id: download_allure_report
         uses: actions/download-artifact@v4
         with:
@@ -144,7 +153,7 @@ jobs:
           path: all-report/allure-report
 
       - name: Upload all report to github-pages
-        if: steps.download_playwright_html_report.outcome == 'success' && steps.download_allure_report.outcome == 'success'
+        if: false # steps.download_playwright_html_report.outcome == 'success' && steps.download_allure_report.outcome == 'success'
         uses: actions/upload-pages-artifact@v3
         with:
           path: all-report
