--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/core": "^17.0.3",
     "@angular/forms": "^17.0.3",
     "@angular/material": "^17.0.1",
+    "@angular/material-moment-adapter": "^17.3.10",
     "@angular/platform-browser": "^17.0.3",
     "@angular/platform-browser-dynamic": "^17.0.3",
     "@angular/router": "^17.0.3",
