--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "serve:render": "ng serve -c render",
     "serve:ci": "ng serve -c ci",
     "serve:integration": "ng serve -c integration",
+    "serve:integration-local": "ng serve -c integration-local",
     "start": "node --env-file .prod.env server/server.js",
     "start:ci": "node --env-file .ci.env server/server.js",
     "build": "ng build -c render && node insert-commit-hash.js",
