--- a/package.json
+++ b/package.json
@@ -69,11 +69,13 @@
     "@typescript-eslint/parser": "^7.9.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "husky": "^9.0.11",
     "lodash": "^4.17.21",
     "ngx-cookie-service": "^17.1.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.2"
   }
