--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "scripts": {
     "ng": "ng",
     "serve": "ng serve",
-    "serve:prod": "ng serve -c prod",
-    "serve:render": "ng serve -c render",
-    "serve:ci": "ng serve -c ci",
-    "serve:integration": "ng serve -c integration",
-    "serve:integration-local": "ng serve -c integration-local",
+    "serve:prod": "ng serve ts-etl-ui -c prod",
+    "serve:render": "ng serve ts-etl-ui -c render",
+    "serve:ci": "ng serve ts-etl-ui -c ci",
+    "serve:integration": "ng serve ts-etl-ui -c integration",
+    "serve:integration-local": "ng serve ts-etl-ui -c integration-local",
     "start": "node --env-file .prod.env server/server.js",
     "start:ci": "node --env-file .ci.env server/server.js",
-    "build": "ng build -c render && node insert-commit-hash.js",
-    "build:prod": "ng build -c prod && node insert-commit-hash.js",
-    "build:ci": "ng build -c ci && node insert-commit-hash.js",
-    "watch": "ng build --watch --configuration development",
+    "build": "ng build ts-etl-ui -c render && node insert-commit-hash.js",
+    "build:prod": "ng build ts-etl-ui -c prod && node insert-commit-hash.js",
+    "build:ci": "ng build ts-etl-ui -c ci && node insert-commit-hash.js",
+    "build:coverage": "ng build e2e-coverage -c production",
     "test": "playwright test --project=ts-elt-ui",
     "test:smoke": "playwright test --project=debug",
     "test:debug": "playwright test --project=debug --debug",
