--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "ng": "ng",
     "serve": "ng serve",
+    "serve:coverage": "ng serve  e2e-coverage -c coverage ",
     "serve:prod": "ng serve ts-etl-ui -c prod",
     "serve:render": "ng serve ts-etl-ui -c render",
     "serve:ci": "ng serve ts-etl-ui -c ci",
     "serve:integration": "ng serve ts-etl-ui -c integration",
     "serve:integration-local": "ng serve ts-etl-ui -c integration-local",
-    "start": "node --env-file .prod.env server/server.js",
-    "start:ci": "node --env-file .ci.env server/server.js",
+    "start": "node --env-file .prod.env --experimental-modules server/server.js",
+    "start:ci": "node --env-file .ci.env --experimental-modules server/server.js",
     "build": "ng build ts-etl-ui -c render && node insert-commit-hash.js",
     "build:prod": "ng build ts-etl-ui -c prod && node insert-commit-hash.js",
     "build:ci": "ng build ts-etl-ui -c ci && node insert-commit-hash.js",
