--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,11 @@
     "moduleResolution": "node",
     "target": "ES2022",
     "module": "ES2022",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "types": [
+      "node",
       "jasmine"
     ],
     "lib": [
