--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/platform-browser-dynamic": "^17.0.3",
     "@angular/router": "^17.0.3",
     "cookie-parser": "^1.4.6",
+    "coverage-istanbul-loader": "^3.0.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "file-saver": "^2.0.5",
@@ -49,6 +50,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.7.0",
     "node-fetch": "^3.3.2",
+    "nyc": "^17.0.0",
     "rxjs": "~7.5.0",
     "zone.js": "~0.14.0"
   },
