--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ts-etl-ui",
   "version": "0.0.0",
   "type": "module",
-  "main": "server/server.ts",
+  "main": "server/server.js",
   "scripts": {
     "ng": "ng",
     "serve": "ng serve",
@@ -44,7 +44,6 @@
     "cookie-parser": "^1.4.6",
     "coverage-istanbul-loader": "^3.0.5",
     "ejs": "^3.1.10",
-    "errorhandler": "^1.5.1",
     "express": "^4.19.2",
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -67,10 +66,7 @@
     "@angular/compiler-cli": "^17.0.3",
     "@angular/material": "^17.0.1",
     "@playwright/test": "^1.44.0",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/errorhandler": "^1.5.3",
     "@types/file-saver": "^2.0.7",
-    "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
