--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,8 @@
 {
   "name": "ts-etl-ui",
   "version": "0.0.0",
+  "type": "module",
+  "main": "server/server.js",
   "scripts": {
     "ng": "ng",
     "serve": "ng serve ts-etl-ui",
@@ -10,7 +12,7 @@
     "serve:coverage": "ng serve  e2e-coverage -c coverage ",
     "serve:integration": "ng serve ts-etl-ui -c integration",
     "serve:integration-local": "ng serve ts-etl-ui -c integration-local",
-    "start": "cd server; node --env-file .prod.env server.js",
+    "start": "node --env-file .prod.env server/server.js",
     "start:ci": "node --env-file .ci.env server/server.js",
     "build": "ng build ts-etl-ui -c render && node insert-commit-hash.js",
     "build:prod": "ng build ts-etl-ui -c prod && node insert-commit-hash.js",
