create time date range should be material range

--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
             ],
             "allowedCommonJsDependencies": [
               "file-saver",
-              "lodash"
+              "lodash",
+              "moment"
             ],
             "tsConfig": "projects/ts-etl-ui/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
