--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.7.0",
     "node-fetch": "^3.3.2",
     "rxjs": "~7.5.0",
