--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ts-etl-ui",
   "version": "0.0.0",
-  "type": "module",
   "main": "server/server.js",
   "scripts": {
     "ng": "ng",
@@ -11,11 +10,11 @@
     "serve:ci": "ng serve ts-etl-ui -c ci",
     "serve:integration": "ng serve ts-etl-ui -c integration",
     "serve:integration-local": "ng serve ts-etl-ui -c integration-local",
-    "start": "node --env-file .prod.env server/server.js",
-    "start:ci": "node --env-file .ci.env server/server.js",
-    "build": "ng build ts-etl-ui -c render && node insert-commit-hash.js",
-    "build:prod": "ng build ts-etl-ui -c prod && node insert-commit-hash.js",
-    "build:ci": "ng build ts-etl-ui -c ci && node insert-commit-hash.js",
+    "start": "npm run start --prefix server",
+    "start:ci": "npm run start:ci --prefix server",
+    "build": "ng build ts-etl-ui -c render && node server/insert-commit-hash.js",
+    "build:prod": "ng build ts-etl-ui -c prod && node server/insert-commit-hash.js",
+    "build:ci": "ng build ts-etl-ui -c ci && node server/insert-commit-hash.js",
     "test": "playwright test --project=ts-elt-ui",
     "test:smoke": "playwright test --project=debug",
     "test:debug": "playwright test --project=debug --debug",
@@ -40,14 +39,10 @@
     "@angular/platform-browser-dynamic": "^17.0.3",
     "@angular/router": "^17.0.3",
     "cookie-parser": "^1.4.6",
-    "ejs": "^3.1.10",
-    "express": "^4.19.2",
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
-    "mongodb": "^6.7.0",
-    "node-fetch": "^3.3.2",
     "rxjs": "~7.5.0",
     "zone.js": "~0.14.0"
   },
