add server npm workspace

--- a/package.json
+++ b/package.json
@@ -74,5 +74,8 @@
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.2"
-  }
+  },
+  "workspaces": [
+    "server"
+  ]
 }
