--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "ng build ts-etl-ui -c render && node server/insert-commit-hash.js",
     "build:prod": "ng build ts-etl-ui -c prod && node server/insert-commit-hash.js",
     "build:ci": "ng build ts-etl-ui -c ci && node server/insert-commit-hash.js",
-    "build:coverage": "ng build e2e-coverage -c production",
+    "build:coverage": "ng build e2e-coverage -c coverage",
     "test": "playwright test --project=ts-etl-ui",
     "test:smoke": "playwright test --project=debug",
     "test:debug": "playwright test --project=debug --debug",
@@ -41,7 +41,6 @@
     "@angular/platform-browser": "^17.0.3",
     "@angular/platform-browser-dynamic": "^17.0.3",
     "@angular/router": "^17.0.3",
-    "cookie-parser": "^1.4.6",
     "coverage-istanbul-loader": "^3.0.5",
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
