--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,6 @@
 /server/node_modules
 npm-debug.log
 yarn-error.log
-package-lock.json
-/server/package-lock.json
 
 # IDEs and editors
 .idea/
@@ -56,3 +54,4 @@ Thumbs.db
 e2e_nyc_output
 coverage-e2e
 all-report/coverage-e2e
+all-report/playwright-report
