--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i
 
       - name: Grant git permission
         run: git config --global --add safe.directory /__w/ts-etl-ui/ts-etl-ui
