--- a/package.json
+++ b/package.json
@@ -7,17 +7,14 @@
     "serve": "ng serve ts-etl-ui",
     "serve:prod": "ng serve ts-etl-ui -c prod",
     "serve:render": "ng serve ts-etl-ui -c render",
-    "serve:ci": "ng serve ts-etl-ui -c ci",
     "serve:coverage": "ng serve  e2e-coverage -c coverage ",
     "serve:integration": "ng serve ts-etl-ui -c integration",
     "serve:integration-local": "ng serve ts-etl-ui -c integration-local",
     "start": "npm run start --prefix server",
-    "start:ci": "npm run start:ci --prefix server",
     "start:coverage": "npm run start:coverage --prefix server",
     "build": "ng build ts-etl-ui -c render && node server/insert-commit-hash.js",
     "build:prod": "ng build ts-etl-ui -c prod && node server/insert-commit-hash.js",
-    "build:ci": "ng build ts-etl-ui -c ci && node server/insert-commit-hash.js",
-    "build:coverage": "ng build e2e-coverage -c coverage",
+    "build:coverage": "ng build ts-etl-ui -c ci && node server/insert-commit-hash.js",
     "test": "playwright test --project=ts-etl-ui",
     "test:smoke": "playwright test --project=debug",
     "test:debug": "playwright test --project=debug --debug",
