--- a/.github/workflows/pr-cleanup.yml
+++ b/.github/workflows/pr-cleanup.yml
@@ -22,4 +22,4 @@ jobs:
         run: npm ci
 
       - name: Remove Mongo DB collections for pr ${{ github.event.number }}
-        run: PR=${{ github.event.number }} node --env-file server/.ci.env server/clean-up-mongo-db-for-pr.js
+        run: PR=${{ github.event.number }} node --env-file server/.coverage.env server/clean-up-mongo-db-for-pr.js
