--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -35,10 +35,10 @@ jobs:
         run: git config --global --add safe.directory /__w/ts-etl-ui/ts-etl-ui
 
       - name: Build Angular
-        run: npm run build:ci
+        run: npm run build:coverage
 
       - name: Reset MongoDb
-        run: PR=${{ github.event.number }} node --env-file server/.ci.env server/reset-mongo-db.js
+        run: PR=${{ github.event.number }} node --env-file server/.coverage.env server/reset-mongo-db.js
 
       - name: Run Playwright tests
         run: PR=${{ github.event.number }} npm run test
