--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "serve": "ng serve ts-etl-ui",
     "serve:prod": "ng serve ts-etl-ui -c prod",
     "serve:render": "ng serve ts-etl-ui -c render",
-    "serve:ci": "ng serve ts-etl-ui -c ci",
+    "serve:coverage": "ng serve e2e-coverage -c coverage",
     "serve:integration": "ng serve ts-etl-ui -c integration",
     "serve:integration-local": "ng serve ts-etl-ui -c integration-local",
     "start": "npm run start --prefix server",
-    "start:ci": "npm run start:ci --prefix server",
+    "start:coverage": "npm run start:coverage --prefix server",
     "build": "ng build ts-etl-ui -c render && node server/insert-commit-hash.js",
     "build:prod": "ng build ts-etl-ui -c prod && node server/insert-commit-hash.js",
-    "build:ci": "ng build ts-etl-ui -c ci && node server/insert-commit-hash.js",
+    "build:coverage": "ng build e2e-coverage -c coverage && node server/insert-commit-hash.js",
     "test": "playwright test --project=ts-etl-ui",
     "test:smoke": "playwright test --project=debug",
     "test:debug": "playwright test --project=debug --debug",
     "test:ui": "playwright test --project=ts-etl-ui --ui",
+    "coverage-report": "npx nyc report",
     "prepare": "husky"
   },
   "private": true,
@@ -38,11 +39,12 @@
     "@angular/platform-browser": "^17.0.3",
     "@angular/platform-browser-dynamic": "^17.0.3",
     "@angular/router": "^17.0.3",
-    "cookie-parser": "^1.4.6",
+    "coverage-istanbul-loader": "^3.0.5",
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "nyc": "^17.0.0",
     "rxjs": "~7.5.0",
     "zone.js": "~0.14.0"
   },
@@ -64,6 +66,7 @@
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "autoprefixer": "^10.4.19",
+    "cross-env": "^7.0.3",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
