--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
-    "moment-timezone": "^0.5.45",
     "nyc": "^17.0.0",
     "rxjs": "~7.5.0",
     "zone.js": "~0.14.0"
@@ -67,6 +66,8 @@
     "@typescript-eslint/parser": "^7.9.0",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
