--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "serve:integration-local": "ng serve ts-etl-ui -c integration-local",
     "start": "npm run start --prefix server",
     "start:coverage": "npm run start:coverage --prefix server",
+    "startStatic": "npm run startStatic --prefix server",
     "build": "ng build ts-etl-ui -c render && node server/insert-commit-hash.js",
     "build:prod": "ng build ts-etl-ui -c prod && node server/insert-commit-hash.js",
     "build:coverage": "ng build e2e-coverage -c coverage && node server/insert-commit-hash.js",
+    "test:coverage": "playwright test --project=ts-etl-ui",
     "test": "playwright test --project=ts-etl-ui",
     "test:smoke": "playwright test --project=debug",
     "test:debug": "playwright test --project=debug --debug",
