--- a/server/.coverage.env
+++ b/server/.coverage.env
@@ -3,3 +3,4 @@ MONGO_USERNAME=peterhuangnih
 MONGO_PASSWORD=upbjppmDsYVsl61H
 MONGO_HOSTNAME=ts-etl-ui.oyinipt.mongodb.net/
 MONGO_DBNAME=ci
+COVERAGE=true
