--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "build": "ng build ts-etl-ui -c render && node server/insert-commit-hash.js",
     "build:prod": "ng build ts-etl-ui -c prod && node server/insert-commit-hash.js",
     "build:coverage": "ng build e2e-coverage -c coverage && node server/insert-commit-hash.js",
-    "test:coverage": "playwright test --project=ts-etl-ui",
     "test": "playwright test --project=ts-etl-ui",
     "test:smoke": "playwright test --project=debug",
     "test:debug": "playwright test --project=debug --debug",
     "test:ui": "playwright test --project=ts-etl-ui --ui",
+    "test:coverage": "cross-env COVERAGE=true playwright test --project=ts-etl-ui",
     "coverage-report": "npx nyc report",
     "prepare": "husky"
   },
