--- a/angular.json
+++ b/angular.json
@@ -107,7 +107,8 @@
               "buildTarget": "ts-etl-ui:build:render"
             },
             "development": {
-              "buildTarget": "ts-etl-ui:build:development"
+              "buildTarget": "ts-etl-ui:build:development",
+              "proxyConfig": "projects/ts-etl-ui/src/proxy.conf.json"
             },
             "integration": {
               "buildTarget": "ts-etl-ui:build:integration",
