--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ Thumbs.db
 
 # coverage file
 e2e_nyc_output
-coverage-e2e_2
+coverage-e2e
 all-report/coverage-e2e
 all-report/playwright-report
 
