381 revert proxy on ng serve (#383)
* revert proxy on ng serve

* done

* fix

* a

* a

* a

* revert

* a

* remove husky _

--- a/angular.json
+++ b/angular.json
@@ -96,6 +96,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
+            "options": {
+              "proxyConfig": "projects/ts-etl-ui/src/proxy.conf.json"
+            },
             "prod": {
               "buildTarget": "ts-etl-ui:build:prod",
               "proxyConfig": "projects/ts-etl-ui/src/proxy-integration.conf.json"
@@ -104,7 +107,8 @@
               "buildTarget": "ts-etl-ui:build:render"
             },
             "development": {
-              "buildTarget": "ts-etl-ui:build:development"
+              "buildTarget": "ts-etl-ui:build:development",
+              "proxyConfig": "projects/ts-etl-ui/src/proxy.conf.json"
             },
             "integration": {
               "buildTarget": "ts-etl-ui:build:integration",
