380 improve local playwright and development (#386)
* improve local playwright and development

* done

* a

* a

* revert

* done

* revert

---------

Co-authored-by: ludetc <ludetc@gmail.com>

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,7 +1,7 @@
 {
   "check-coverage": true,
   "reportDir": "coverage-e2e",
-  "temp-dir": "e2e_nyc_output",
+  "temp-dir": ".nyc_output",
   "reporter": [
     "lcov",
     "json",
