--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -36,18 +36,14 @@ jobs:
       - name: Run Playwright tests
         run: PR=${{ github.event.number }} npm run test
 
-      - name: Upload Playwright HTML report to Azure
-        shell: bash
-        id: deploy-playwright-report
-        run: |
-          REPORT_DIR='run-${{ github.run_id }}-${{ github.run_attempt }}-playwright-report'
-          ./azcopy cp --recursive "./playwright-report/*" "https://tsetlui.blob.core.windows.net/\$web/$REPORT_DIR"
-          echo "::notice title=HTML report url::https://tsetlui.z1.web.core.windows.net/$REPORT_DIR/index.html"
-        env:
-          AZCOPY_AUTO_LOGIN_TYPE: SPN
-          AZCOPY_SPA_APPLICATION_ID: '${{ secrets.AZCOPY_SPA_APPLICATION_ID }}'
-          AZCOPY_SPA_CLIENT_SECRET: '${{ secrets.AZCOPY_SPA_CLIENT_SECRET }}'
-          AZCOPY_TENANT_ID: '${{ secrets.AZCOPY_TENANT_ID }}'
+      - name: Upload playwright blob report to Artifacts
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report
+          retention-days: 30
+
       #
       #      - name: Merge both playwright & coverage report
       #        if: always()
@@ -70,6 +66,31 @@ jobs:
       #        if: always()
       #        run: echo "# Deployed playwright report to ${{ steps.deploy-playwright-report-to-github-page.outputs.page_url }}" >> $GITHUB_STEP_SUMMARY
 
+  publish-playwright-html-report:
+    needs: [ e2e-test ]
+    name: publish-playwright-html-report
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download playwright blob report from Previous job(s)
+        uses: actions/download-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report
+
+      - name: Upload Playwright HTML report to Azure
+        shell: bash
+        id: deploy-playwright-report
+        run: |
+          REPORT_DIR='run-${{ github.run_id }}-${{ github.run_attempt }}-playwright-report'
+          ./azcopy cp --recursive "./playwright-report/*" "https://tsetlui.blob.core.windows.net/\$web/$REPORT_DIR"
+          echo "::notice title=HTML report url::https://tsetlui.z1.web.core.windows.net/$REPORT_DIR/index.html"
+        env:
+          AZCOPY_AUTO_LOGIN_TYPE: SPN
+          AZCOPY_SPA_APPLICATION_ID: '${{ secrets.AZCOPY_SPA_APPLICATION_ID }}'
+          AZCOPY_SPA_CLIENT_SECRET: '${{ secrets.AZCOPY_SPA_CLIENT_SECRET }}'
+          AZCOPY_TENANT_ID: '${{ secrets.AZCOPY_TENANT_ID }}'
+
       - name: update job summary
         if: always()
-        run: echo "# Deployed playwright report to ${{ steps.deploy-playwright-report-to.outputs.page_url }}" >> $GITHUB_STEP_SUMMARY
+        run: echo "# Deployed playwright report to ${{ steps.deploy-playwright-report-to.outputs.url }}" >> $GITHUB_STEP_SUMMARY
