--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -73,7 +73,7 @@ jobs:
 
     steps:
       - name: Install azure-cli
-        run: apt-get azure-cli
+        run: apt-get install azure-cli
 
       - name: Download playwright blob report from Previous job(s)
         uses: actions/download-artifact@v4
